--- a/assets/tmpl/first-banner.html
+++ b/assets/tmpl/first-banner.html
@@ -189,15 +189,17 @@
           <p class="muted">&mdash;verb: to debug using the process of
           elimination.</p>
           -->
-          <p class="lead">Your manual triage efforts are no
+          <p class="lead" style="font-size:25px;">Your manual triage efforts are no
           match for the failures that are exhibited by a complex
           continuously integrated system sourcing from hundreds of
           developers.</p>
 
-          <p class="lead">Use <strong>Bisect</strong> to create canned triage steps
-          and let it scan logs for failures.</p>
+          <p class="lead"
+          style="font-size:25px;">Use <strong>Bisect</strong> to
+          automatically triage incoming issues for known failures.</p>
 
-          <p class="lead">Never perform a mind numbing debug again.</p>
+          <p class="lead" style="font-size:25px;">Create canned triage tests once. Never
+          perform a mind numbing debug again.</p>
 
           <div class="row-fluid" style="border-top:2px dotted #DDD; padding-top:20px">
 
@@ -217,7 +219,7 @@
                 <span class="media-object rapico">Ñ</span>
                 <div class="media-body">
                   <p class="lead"><strong>Automate</strong><br>
-                  Integrate with Continuous Integration by using POST API<br>
+                  Tap into Continuous Integration by using POST API<br>
                   <a id="ci-btn" href="#ci-seg">Scroll to example</a></p>
                 </div>
               </div>
