--- a/assets/tmpl/first-banner.html
+++ b/assets/tmpl/first-banner.html
@@ -190,7 +190,7 @@
           elimination.</p>
           -->
           <p class="lead" style="font-size:25px;">Your manual triage efforts are no
-          match for the failures that are exhibited by a complex
+          match for the failures that occur in a complex
           continuously integrated system sourcing from hundreds of
           developers.</p>
 
