--- a/assets/tmpl/first-banner.html
+++ b/assets/tmpl/first-banner.html
@@ -189,8 +189,10 @@
           <p class="muted">&mdash;verb: to debug using the process of
           elimination.</p>
           -->
+          <h2 class="media-heading">Debugging is repetitive and
+          tedious...</h2>
           <p class="lead" style="font-size:25px;">Your manual triage efforts are no
-          match for the failures that occur in a complex
+          match for the volume of failures that occur in a complex
           continuously integrated system sourcing from hundreds of
           developers.</p>
 
