Rename html #ids

--- a/assets/tmpl/first-banner.html
+++ b/assets/tmpl/first-banner.html
@@ -35,7 +35,7 @@
                 <div class="media-body">
                   <p class="lead"><strong>Debug</strong><br>
                   Create decision trees to codify repetitive triage steps<br>
-                  <a id="dbg-btn" href="#t-tmpl-r3-test">Scroll to example</a></p>
+                  <a id="dbg-btn" href="#treeview">Scroll to example</a></p>
                 </div>
               </div>
             </div>
