--- a/assets/tmpl/base.html
+++ b/assets/tmpl/base.html
@@ -173,11 +173,9 @@
 
       {% block market_splash %}{%endblock market_splash%}
 
-      <div id="t-tmpl-r3-test" class="tree-container"></div>
+      <div id="treeview" class="tree-container"></div>
 
-      {# <div id="mytlist" class="seg-container"></div> #}
-
-      <div id="recenttlist" class="seg-container"></div>
+      <div id="treelist" class="seg-container"></div>
 
       {% block rest_example %}{%endblock rest_example%}
 
@@ -388,15 +386,14 @@
     <script type="text/javascript">
       jQuery(document).ready(function(){
       var this_tree = {{thistree}};
-      {# mytlist = new TreeListView({el:"#mytlist", model: new TreeListModel({{mytlist}})}); #}
-      recenttlist = new TreeListView({el:"#recenttlist", model: new TreeListModel({{recenttlist}})});
+      treelist = new TreeListView({el:"#treelist", model: new TreeListModel({{treelist}})});
       mytreemodel = new TreeModel(this_tree !== null ?this_tree:new_tree);
-      mytreeview = new TreeView({el:"#t-tmpl-r3-test", model: mytreemodel});
+      mytreeview = new TreeView({el:"#treeview", model: mytreemodel});
       myroute = new BisectRouter();
       Backbone.history.start({pushState: true});
       $("#about-btn").click(_ScrollTo("#about"));
       $("#ci-btn").click(_ScrollTo("#ci-seg"));
-      $("#dbg-btn").click(_ScrollTo("#t-tmpl-r3-test"));
+      $("#dbg-btn").click(_ScrollTo("#treeview"));
       });
     </script>
   </body>
