Fix missing tmpl error and welcome text

--- a/assets/tmpl/base.html
+++ b/assets/tmpl/base.html
@@ -225,6 +225,13 @@
     </script>
     {% endraw %}
 
+    {% raw %}
+    <script type="text/template" id="tmpl-telem">
+        <h4 class="node-head">{{{head}}}</h4>
+        <p class="node-desc">{{{desc}}}</p>
+    </script>
+    {% endraw %}
+
    <!-- Le javascript
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
