--- a/assets/tmpl/first-banner.html
+++ b/assets/tmpl/first-banner.html
@@ -21,11 +21,11 @@
           continuously integrated system sourcing from hundreds of
           developers.</p>
 
-          <ol class="lead" style="font-size:25px;text-align:left;">
-            <li>Use <strong>Bisect</strong> to create a decision tree to triage an issue just once.</li>
-            <li>Reuse decision tree by piping incident logs for known failures.</li>
-            <li>Never perform a mind numbing debug again.</li>
-          </ol>
+          <p class="lead" style="font-size:25px;text-align:left;">
+            <strong>1.</strong> Use Bisect to create a decision tree to triage an issue just once.<br>
+            <strong>2.</strong> Reuse decision tree by piping incident logs for known failures.<br>
+            <strong>3.</strong> Never perform a mind numbing debug again.<br>
+          </p>
 
           <div class="row-fluid" style="border-top:2px dotted #DDD; padding-top:20px">
 
