Add margin below headline

--- a/assets/tmpl/first-banner.html
+++ b/assets/tmpl/first-banner.html
@@ -16,7 +16,7 @@
             elimination.</p>
           #}
 
-          <h1 class="media-heading">Debugging is repetitive and tedious</h1>
+          <h1 style="margin-bottom:20px;">Debugging is repetitive and tedious</h1>
           <p class="bisect-lead">Your manual triage efforts are no
           match for the volume of failures that occur in a complex
           continuously integrated system sourcing from hundreds of
